fix: Adjust alignment for search bar and pokemon card

--- a/src/Components/PokemonCard/pokemon-card.scss
+++ b/src/Components/PokemonCard/pokemon-card.scss
@@ -5,7 +5,7 @@
 }
 
 .pokemon-card {
-    margin: 5rem;
+    margin: 0 0 10px 10px;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
